--- a/analysis-non-voters/analysis-nonvoter-final.ipynb
+++ b/analysis-non-voters/analysis-nonvoter-final.ipynb
@@ -20,7 +20,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n"
    ]
   },
   {
