--- a/analysis-non-voters/analysis-nonvoter-final.ipynb
+++ b/analysis-non-voters/analysis-nonvoter-final.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Who didn't vote in 2020? \n",
+    "# Who didn't vote in 2020?\n",
     "\n",
     "This is an analysis of data collected from Americans by Ipsos for FiveThirtyEight. The survey collected information on respondents' voting behavior, demographic information and their views on a number of different issues. \n",
     "\n",
-    "The poll was conducted from September 15 to September 25, 2020 among a sample of 5,239 U.S. citizens that oversampled young, Black and Hispanic respondents. It also includes a higher percentage of respondents who described themselves as voting “rarely” or “never” so as to avoid underrepresenting nonvoters. "
+    "The poll was conducted from September 15 to September 25, 2020 among a sample of 5,239 U.S. citizens that oversampled young, Black and Hispanic respondents. It also includes a higher percentage of respondents who described themselves as voting “rarely” or “never” so as to avoid underrepresenting nonvoters. \n"
    ]
   },
   {
@@ -20,8 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n"
+    "import seaborn as sns"
    ]
   },
   {
