--- a/portfolio/enneagram-analysis.ipynb
+++ b/portfolio/enneagram-analysis.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Using self reported, crow-sourced data, I'll consider the reasons why different types agree (or disagree) with their enneagram type description, key takeaways and opportunities for further analysis.\n",
     "\n",
-    "I used Python (pandas, seaborn, pandasql). For a Jupyter Notebook with my code, [go here]().\n",
+    "I used Python (pandas, seaborn, pandasql). For a Jupyter Notebook with my code, [go here](https://github.com/The-Rebeckoning/data-science/blob/main/portfolio/enneagram-analysis.ipynb).\n",
     "\n",
     "If you'd like to take the test, [here's a free on I like](https://www.eclecticenergies.com/enneagram/test)). If you're inspired by my analysis and looking to spend a little bit of money, I'd recommend the test from the [Enneagram Insitute](https://tests.enneagraminstitute.com/orders/create). \n",
     "\n",
@@ -346,9 +346,9 @@
    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   },
   "kernelspec": {
-   "display_name": "data-science",
+   "display_name": "sql",
    "language": "python",
-   "name": "data-science"
+   "name": "sql"
   },
   "language_info": {
    "codemirror_mode": {
