updated with feedback

--- a/portfolio/enneagram-analysis.ipynb
+++ b/portfolio/enneagram-analysis.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Agree with your enneagram? It depends on your type. \n",
+    "# What the enneagram says about the traits we value most \n",
     "\n",
-    "In this analysis, I'll explore the relationship between an individual's enneagram and the likelihood that they agree with their type's description.\n",
+    "In this analysis, I'll explore the relationship between an individual's enneagram and the likelihood that they agree with their type's description. \n",
     "\n",
-    "Using self reported, crow-sourced data, I'll consider the reasons why different types agree (or disagree) with their enneagram type description, key takeaways and opportunities for further analysis.\n",
+    "The major assumption of my analysis is that people are more likely to accept information they perceive as good and reject information they perceive as bad.  \n",
+    "\n",
+    "I'll consider the reasons why different types agree (or disagree) with their enneagram type description what this says about the personality traits we value the most. I'll also discuss opportunities for further analysis.\n",
     "\n",
     "I used Python (pandas, seaborn, pandasql). For a Jupyter Notebook with my code, [go here](https://github.com/The-Rebeckoning/data-science/blob/main/portfolio/enneagram-analysis.ipynb).\n",
     "\n",
@@ -307,7 +309,7 @@
    "source": [
     "## Key takeaways\n",
     "\n",
-    "### Takeaway one: Ego-focused types believe the enneagram is accurate\n",
+    "### Takeaway one: We value people who value themselves. \n",
     "\n",
     "If we compare the qualities between types with the highest and lowest perceived accuracy scores, we learn that types that exhibit more selfishness are most likely to perceive their description as accurate. \n",
     "\n",
@@ -315,9 +317,9 @@
     "\n",
     "It's possible that these types like their description because a those descriptions are widely celebrated (which brings us to our next takeaway).\n",
     "\n",
-    "### Takeaway two: More overlooked types agree less with their type description\n",
+    "### Takeaway two: Overlooked traits are valued less. \n",
     "\n",
-    "Now, we can turn to those types that are least likely to perceive their enenagram as accurate: fives, sixes and twos. At first glance, these three types have very little in common. Fives are the thinkers, sixes the \"go down with the ship\" loyalists and twos the helpers.\n",
+    "Now, we can turn to those types that are least likely to perceive their enneagram as accurate: fives, sixes and twos. At first glance, these three types have very little in common. Fives are the thinkers, sixes the \"go down with the ship\" loyalists and twos the helpers.\n",
     "\n",
     "In terms of personality, what these types have in common is they represent qualities that are needed in society but are often overlooked. For example, the two \"the Helper\" takes care of others. This type of emotional labor, though badly-needed, is often unseen. \n",
     "\n",
@@ -326,14 +328,17 @@
     "\n",
     "### Takeaway three: Delivery of self-help resources should be subjective\n",
     "\n",
-    "When it comes to personality tests, before communicating the results, it's important to take a step back and consider how the person receiving the personality test will understand the results. For example, an enneagram who is more likely to perceive the results positively may need to consider how the dark side of their type is also relevant and vice-versa. \n",
+    "When it comes to personality tests, before communicating the results, it's important to take a step back and consider how the person receiving the personality test will understand the results. Since derive value of \n",
+    "\n",
+    "For example, an enneagram who is more likely to perceive the results positively may need to consider how the dark side of their type is also relevant and vice-versa. \n",
     "\n",
     "While this might seem like common sense, subjectivity is not always a framework for approaches to mental health. \n",
     "\n",
+    "### Conclusion\n",
     "\n",
-    "### Implications\n",
+    "The enneagram is a useful framework for individuals to better understand themselves and how they relate to others. My analysis shows that certain types are more likely to accept their type description as accurate whereas others are less sure. This variance indicates that society as a whole values traits of those who look out for their own interests. \n",
     "\n",
-    "The enneagram provides us with opportunity to understand the relationship between self-improvement and personality.\n",
+    "Here's some topics for additional exploration. \n",
     "\n",
     "- Analysis about whether or not the enneagram is a useful measure of personality\n",
     "- Compare the enneagram to other personality tests in terms of perceived accuracy (for example, Myer's Briggs)\n",
