--- a/portfolio/enneagram-analysis.ipynb
+++ b/portfolio/enneagram-analysis.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "I used Python (pandas, seaborn, pandasql). For a Jupyter Notebook with my code, [go here](https://github.com/The-Rebeckoning/data-science/blob/main/portfolio/enneagram-analysis.ipynb).\n",
     "\n",
-    "If you'd like to take the test, [here's a free one I like](https://www.eclecticenergies.com/enneagram/test)). If you're inspired by my analysis and looking to spend a little bit of money, I'd recommend the test from the [Enneagram Insitute](https://tests.enneagraminstitute.com/orders/create). \n",
+    "If you'd like to take the test, [here's a free one I like](https://www.eclecticenergies.com/enneagram/test). If you're inspired by my analysis and looking to spend a little bit of money, I'd recommend the test from the [Enneagram Insitute](https://tests.enneagraminstitute.com/orders/create). \n",
     "\n",
     "Last, for the purposes of this assessment, I'm making assumptions that the enneagram is an accurate assessment of personality. I'll explore the possibility that this is not the case in the last section."
    ]
