--- a/portfolio/enneagram-analysis.ipynb
+++ b/portfolio/enneagram-analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this analysis, I'll explore the relationship between an individual's enneagram and the likelihood that they agree with their type's description. \n",
     "\n",
-    "The major assumption of my analysis is that people are more likely to accept information they perceive as good and reject information they perceive as bad.  \n",
+    "The major assumption here is that people are more likely to accept information they perceive as good and reject information they perceive as bad.  \n",
     "\n",
     "I'll consider the reasons why different types agree (or disagree) with their enneagram type description what this says about the personality traits we value the most. I'll also discuss opportunities for further analysis.\n",
     "\n",
@@ -180,7 +180,7 @@
    "source": [
     "As we can see, the most common enneagram type in our dataset is a type nine. Twos and fours and the next most common type. Ones, fives and sixes are evenly represented whereas threes, sevens and eights were least common.\n",
     "\n",
-    "Although no comprehensive enneagram estimate exists for the general population, it's most often estimated that the nine is the most common enneagram type. "
+    "Although no comprehensive enneagram estimate exists for the general population, it's most often cited that the nine is the most common enneagram type. "
    ]
   },
   {
@@ -311,11 +311,11 @@
     "\n",
     "### Takeaway one: We value people who value themselves. \n",
     "\n",
-    "If we compare the qualities between types with the highest and lowest perceived accuracy scores, we learn that types that exhibit more selfishness are most likely to perceive their description as accurate. \n",
+    "If we compare the qualities between types with the highest and lowest perceived accuracy scores, we learn that types that exhibit more selfishness perceive their description as accurate. \n",
     "\n",
     "Eights are the most dominant and strong-willed of enneagram types. Threes are the \"go getters\" of the enneagram and four the romantics. These are three very different types but they all show a strong degree of focus on self and desire to get their needs met.\n",
     "\n",
-    "It's possible that these types like their description because a those descriptions are widely celebrated (which brings us to our next takeaway).\n",
+    "It's possible that these types like their description because they're widely celebrated (which brings us to our next takeaway).\n",
     "\n",
     "### Takeaway two: Overlooked traits are valued less. \n",
     "\n",
@@ -326,19 +326,17 @@
     "When these types read their description, perhaps it's a reminder of the parts of themselves are are unrecognized by society and, in an effort to distance themselves from that self, they perceive it as less accurate. \n",
     "\n",
     "\n",
-    "### Takeaway three: Delivery of self-help resources should be subjective\n",
+    "### Takeaway three: The delivery of personality assessments should be subjective.\n",
     "\n",
-    "When it comes to personality tests, before communicating the results, it's important to take a step back and consider how the person receiving the personality test will understand the results. Since derive value of \n",
+    "When it comes to personality tests, before communicating the results, it's important to take a step back and consider how the person receiving the personality test will understand that assessment. \n",
     "\n",
-    "For example, an enneagram who is more likely to perceive the results positively may need to consider how the dark side of their type is also relevant and vice-versa. \n",
-    "\n",
-    "While this might seem like common sense, subjectivity is not always a framework for approaches to mental health. \n",
+    "For example, an enneagram who is more likely to perceive the results positively may need to consider how the dark side of their type is also relevant and vice-versa. Feedback and recommendations for self-development should also reflect an individual dark side and sense of self. \n",
     "\n",
     "### Conclusion\n",
     "\n",
-    "The enneagram is a useful framework for individuals to better understand themselves and how they relate to others. My analysis shows that certain types are more likely to accept their type description as accurate whereas others are less sure. This variance indicates that society as a whole values traits of those who look out for their own interests. \n",
+    "The enneagram is a useful framework for individuals to better understand themselves and how they relate to others. My analysis shows that certain types agree more with their type descriptions whereas others are less sure. This variance might indicate that society as a whole values traits of those who look out for their own interests. \n",
     "\n",
-    "Here's some topics for additional exploration. \n",
+    "Here's some topics for additional exploration:\n",
     "\n",
     "- Analysis about whether or not the enneagram is a useful measure of personality\n",
     "- Compare the enneagram to other personality tests in terms of perceived accuracy (for example, Myer's Briggs)\n",
