created histograms for individual questions

--- a/portfolio/in-progress/american_valuesv2/project plan for dashboard of being a good american.ipynb
+++ b/portfolio/in-progress/american_valuesv2/project plan for dashboard of being a good american.ipynb
@@ -20,9 +20,10 @@
    "metadata": {},
    "source": [
     "# Phase 2 \n",
-    "weighting for data: data visualizations reflect how likely the respondent reflects the general population \n",
     "\n",
-    "interactive dashboards for exploratory analysis\n"
+    "interactive dashboards for exploratory analysis\n",
+    "\n",
+    "-Replace 1-4 with strong agree- strong disagree"
    ]
   },
   {
@@ -33,7 +34,9 @@
     "# Phase 3\n",
     "generates text that tells reader how many of people in their demographic agree with their statements\n",
     "\n",
-    "interactive dashboards for exploratory analysis that segments by demographic (allowing you to compare the mode that is weighted to reflect the demographic"
+    "interactive dashboards for exploratory analysis that segments by demographic (allowing you to compare the mode that is weighted to reflect the demographic\n",
+    "\n",
+    "weighting for data: data visualizations reflect how likely the respondent reflects the general population \n"
    ]
   },
   {
