finished cleaning up data

--- a/portfolio/in-progress/american_valuesv2/EDA-american-values.ipynb
+++ b/portfolio/in-progress/american_valuesv2/EDA-american-values.ipynb
@@ -229,13 +229,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1070,7 +1063,7 @@
     "\n",
     "        \n",
     "\n",
-    "create_countplot(x_values, dataframe)"
+    "create_countplot(x_values, dataframe)\n"
    ]
   }
  ],
