--- a/portfolio/in-progress/american_valuesv2/project plan for dashboard of being a good american.ipynb
+++ b/portfolio/in-progress/american_valuesv2/project plan for dashboard of being a good american.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "interactive dashboards for exploratory analysis\n",
     "\n",
-    "-Replace 1-4 with strong agree- strong disagree"
+    "-Replace 1-4 with strong agree- strong disagree\n",
+    "\n",
+    "- filter to exclude values of -1 and add to EDA"
    ]
   },
   {
@@ -105,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -120,6 +122,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
